@@ -1,4 +1,4 @@
- $NetBSD: CHANGES-8.3,v 1.1.2.146 2022/09/07 10:10:55 martin Exp $
+ $NetBSD: CHANGES-8.3,v 1.1.2.148 2022/09/10 08:22:38 martin Exp $
 
 A complete list of changes from the NetBSD 8.2 release to the NetBSD 8.3
 release:
@@ -2773,4 +2773,14 @@ sys/dev/pci/if_wmreg.h				1.126-1.127
 	  - Consistency use -1 instead of 1 for some error code.
 	  - KNF.
 	[msaitoh, ticket #1759]
+
+sys/kern/kern_core.c				1.36
+
+	Fix kauth credential reference leak.
+	[christos, ticket #1760]
+
+sys/kern/kern_core.c				1.37
+
+	Avoid a GCC warning.
+	[mrg, ticket #1761]
 
